# quant_bench

./: README.md  install_env.sh  pyproject.toml  requirements.txt  run_example.sh  run_pipeline.py  run_w4_analysis.md
1-trans/: original.yaml  spinquant-r1r2.yaml
2-quant/: rtn-w8a8-dynamic.yaml  rtn-w8a8-static.yaml
3-eval/: mmlu_gsm8k.yaml
pipline/1-trans/: spinquant-r1r2.yaml
pipline/1-trans/example/: original.yaml  spinquant-r1r2.yaml
pipline/2-quant/: gptq-w4a8-dynamic.yaml  r4-gptq-w4a16-g128.yaml  r4-gptq-w4a16.yaml  r4-gptq-w4a8-static-mix-precision.yaml  rtn-w8-weightonly.yaml  rtn-w8a8-dynamic.yaml
pipline/2-quant/example/: gptq-w4a16-g128-weightonly.yaml  gptq-w4a16-g128.yaml  gptq-w8-weightonly.yaml  gptq-w8a8-dynamic.yaml  gptq-w8a8-static-ignore-down.yaml  gptq-w8a8-static.yaml  r4-gptq-w4a8-dynamic.yaml  r4-gptq-w4a8-static.yaml  rtn-w8-weightonly.yaml
pipline/3-eval/: mmlu_gsm8k.yaml
test/: 2-quant.py  TEST.md
test/extra/: 2-quant-dynamic.py  2-quant-ignore-down.py  2-quant-weightonly-gptq.py  2-quant-weightonly-rtn.py  3-eval-extra.py  clean_model.py
